<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="156dp"
        android:layout_height="25dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="277dp"
        android:text="@string/titulo"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCelsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/celcius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <TextView
        android:id="@+id/tvFarenheit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/farenheit"
        app:layout_constraintStart_toStartOf="@+id/tvCelsius"
        app:layout_constraintTop_toBottomOf="@+id/tvCelsius" />

    <TextView
        android:id="@+id/tvKelvin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/kelvin"
        app:layout_constraintStart_toStartOf="@+id/tvFarenheit"
        app:layout_constraintTop_toBottomOf="@+id/tvFarenheit" />

    <Button
        android:id="@+id/btnGC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="256dp"
        android:backgroundTint="#000000"
        android:text="@string/celcius"
        app:cornerRadius="@dimen/cardview_default_elevation"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:backgroundTint="#000000"
        android:text="@string/kelvin"
        app:cornerRadius="@dimen/cardview_default_elevation"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnGF"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnGF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:backgroundTint="#0B0B0B"
        android:text="@string/farenheit"
        app:cornerRadius="@dimen/cardview_default_elevation"
        app:layout_constraintEnd_toStartOf="@+id/btnGK"
        app:layout_constraintTop_toTopOf="@+id/btnGC" />

    <EditText
        android:id="@+id/etC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/tvCelsius"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <EditText
        android:id="@+id/etF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/etC"
        app:layout_constraintTop_toBottomOf="@+id/etC" />

    <EditText
        android:id="@+id/etK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/tvKelvin"
        app:layout_constraintTop_toBottomOf="@+id/etF" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="369dp"
        android:layout_height="104dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="310dp"
        android:text="@string/info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

</androidx.constraintlayout.widget.ConstraintLayout>